--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -8,6 +8,7 @@
 <body>
   <h1>JavaScript</h1>
 
-  <script src="./js/JS循环.js"></script>
+  <!-- <script src="./js/JS循环.js"></script> -->
+  <script src="./js/函数注释规范.js"></script>
 </body>
 </html>
