--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -9,6 +9,7 @@
   <h1>JavaScript</h1>
 
   <!-- <script src="./js/JS循环.js"></script> -->
-  <script src="./js/函数注释规范.js"></script>
+  <!-- <script src="./js/函数注释规范.js"></script> -->
+  <script src="./js/实用JS技巧.js"></script>
 </body>
 </html>
